# nanook

./: .gitignore  README.md  REVIEW.md  pyproject.toml
src/nanook/: __init__.py  _typing.py  cli.py  context.py  exceptions.py  pipeline.py  report.py
src/nanook/_internal/: __init__.py  categorical_mdav.py  emd.py  grouping.py  raking.py  rng.py  validate.py
src/nanook/core/: __init__.py  _base.py  _registry.py  _schema.py
src/nanook/core/non_perturbative/: __init__.py  global_recoding.py  local_suppression.py  sampling.py  suppression.py  top_bottom_coding.py
src/nanook/core/perturbative/: __init__.py  data_swapping.py  massc.py  microaggregation.py  multiplicative_noise.py  noise_addition.py  pram.py  rank_swapping.py  resampling.py  rounding.py
src/nanook/metrics/: __init__.py
src/nanook/metrics/risk/: __init__.py  k_anonymity.py  l_diversity.py  t_closeness.py
src/nanook/metrics/utility/: __init__.py  il1s.py  kl_divergence.py  lambda_measure.py
tests/: conftest.py
tests/integration/: test_end_to_end.py  test_engine_round_trip.py  test_method_metric_pairs.py  test_pipeline_reproducibility.py
tests/property/: test_invariants.py
tests/unit/: test_context.py  test_grouping.py  test_pipeline.py
tests/unit/core/: test_global_recoding.py  test_local_suppression.py  test_perturbative.py  test_sampling.py  test_schema.py  test_suppression.py  test_top_bottom_coding.py
tests/unit/metrics/: test_il1s.py  test_k_anonymity.py  test_kl_divergence.py  test_l_diversity.py  test_lambda_measure.py  test_t_closeness.py
